--- a/styles.css
+++ b/styles.css
@@ -22,16 +22,8 @@ p {
   margin: 0;
 }
 
-.container {
-  background: url('./images/background-1.png') top no-repeat;
- 
-}
-
 .content {
   box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
   width: 100%;
 }
 
@@ -39,6 +31,12 @@ p {
   .content {
     width: 1200px;
   }
+}
+
+.content-padding {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
 }
 
 /* Alignment */
@@ -80,16 +78,15 @@ header{
 }
 
 .header-nav-active{
-  background-color: #fff;
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: #fff;
   box-shadow: 0 14px 28px rgba(129,130,160,0.05), 0 10px 10px rgba(129,130,160,0.22);
 }
 
 .menu {
   display: flex;
   align-items: center;
-  background-color: yellow;
 }
 
 .menu-item {
@@ -97,12 +94,21 @@ header{
   margin-left: 50px;
   font-size: 20pх;
   color: rgb(136, 141, 168);
-  background-color: blueviolet;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 920px) {
   .menu-item {
     margin-bottom: 0;
+  }
+}
+
+.menu-item-bottom {
+  margin-left: 0px;
+}
+
+@media (min-width: 920px) {
+  .menu-item-bottom {
+    margin-left: 50px;
   }
 }
 
@@ -120,7 +126,7 @@ header{
 }
 
 .language-item {
-  margin-left: 40px;
+  margin-left: 20px;
   font-size: 20pх;
   color: rgb(136, 141, 168);
 }
@@ -136,9 +142,9 @@ header{
 @media (min-width: 768px) { 
   .login-button {
     display: flex;
+    padding-left: 12px;
     width: 70px;
     height: 25px;
-    padding-left: 12px;
     font-size: 20pх;
     color: rgb(136, 141, 168);
     background-color: rgb(243, 244, 249);
@@ -151,6 +157,9 @@ header{
 .intro-section {
   padding-top: 120px;
   padding-bottom: 40px;
+  width: 100%;
+  background: url('./images/background-1.png') top no-repeat;
+  background-size: cover;
 }
 
 .large-screen {
@@ -164,20 +173,20 @@ header{
 }
 
 .name {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 300;
   position: relative;
   padding-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
   font-size: 30px;
+  font-weight: 300;
   color: rgb(26, 43, 79);
 }
 
 .description {
-  font-family: "SFUIDisplay-Regular"; 
-  line-height: 1.375;
   position: relative;
   padding-bottom: 40px; 
+  font-family: "SFUIDisplay-Regular"; 
   font-size: 16px;
+  line-height: 1.375;
   color: rgb(136, 141, 168);
 }
 
@@ -219,6 +228,7 @@ header{
 
 .overview-section {
   padding-top: 120px;
+  width: 100%;
 }
 
 .screens{
@@ -239,7 +249,7 @@ header{
   text-align: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1250px) {
   .info-container {
     flex-flow: row;
     padding-bottom: 160px;
@@ -280,9 +290,9 @@ header{
 .img-push {
   display: flex;
   flex: none;
+  align-items: center;
   padding-left: 30px;
   padding-right: 30px;
-  align-items: center;
   width: 330px;
   height: 120px;
   border-radius: 8px;
@@ -307,11 +317,21 @@ header{
   flex-direction: column;
 }
 
-.background-phrase{
+.soon{
   position: absolute;
+  top: -8px;
+}
+
+.background-phrase{
   font: 900 136px 'Montserrat', sans-serif;
   color: rgb(249, 249, 252);
+}
+
+.background-phrase-container {
+  position: absolute;
   top: -8px;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 /* Tariff plan */
@@ -328,12 +348,12 @@ header{
 }
 
 .tariff-container {
+  position: relative;
   padding-bottom: 45px;
   margin-top: 45px;
-  position: relative;
+  min-width: 350px;
   border-radius: 5px;
   background-color: rgb(255, 255, 255);
-  min-width: 350px;
 }
 
 .margin-right {
@@ -342,16 +362,16 @@ header{
 
 .tariff-name {
   padding-top: 45px;
-  font-size: 24px;
-  color: rgb(26, 43, 79);
-  font-weight: bold;
   text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: rgb(26, 43, 79);
 }
 
 .price {
   font-size: 36px;
-  color: rgb(103, 136, 243);
   font-weight: bold;
+  color: rgb(103, 136, 243);
 }
 
 .period {
@@ -360,14 +380,14 @@ header{
 }
 
 .recommend {
-  position: absolute;
-  font-size: 13px;
-  color: rgb(255, 255, 255);
-  font-weight: bold;
-  background-color: rgb(243, 103, 149);
   width: 100px;
   height: 30px;
+  position: absolute;
   right: 0;
+  font-size: 13px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  background-color: rgb(243, 103, 149);
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
 }
@@ -388,7 +408,6 @@ header{
   list-style-type: none;
 }
 
-
 /* Feedback */
 
 .feedback-section {
@@ -403,12 +422,11 @@ header{
 
 .decor-line {
   position: absolute;
-  height: 3px;
-  background: #F2F2F8;
   width: 100%;
+  height: 3px;
   bottom: 120px;
+  background: #F2F2F8;
 }
-
 
 .arrow-button {
   align-self: center;
@@ -433,16 +451,16 @@ header{
 .fb-name {
   padding-top: 10px;
   padding-bottom: 10px;
+  height: 30px; 
   font-size: 16px;
   font-weight: 600;
   color: rgb(26, 43, 79); 
-  height: 30px; 
 }
 
 .fb-info {
   height: 60px; 
-  font-size: 14px;
   font-family: "SFUIDisplay-Regular"; 
+  font-size: 14px;
   line-height: 1.375;
   color: rgb(136, 141, 168);
 }
@@ -471,17 +489,14 @@ footer {
   padding-top: 45px;
   padding-bottom: 25px;
   border-bottom: 1px solid rgb(63, 74, 90);
-  background-color: yellow;
 }
-
 
 .input-container {
   display: flex;
   flex-direction: column;
-  background-color: blue;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 920px) {
   .input-container {
     flex-direction: row;
     justify-content: space-between;
@@ -489,6 +504,7 @@ footer {
 }
 
 .footer-input {
+  margin-top: 20px;
   margin-right: 30px;
   padding-left: 30px;
   height: 50px;
@@ -498,10 +514,9 @@ footer {
   border: 1px solid rgb(57, 68, 83);
   border-radius: 30px;
   background-color: rgb(57, 68, 83);
-  margin-top: 20px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 920px) {
   .footer-input {
     flex-direction: row;
     max-width: 250px;
@@ -515,6 +530,7 @@ footer {
 .footer-input:-ms-input-placeholder      {color:rgb(143, 152, 164);}
 
 .textarea-wrapper {
+  box-sizing: border-box;
   margin-top: 10px;
   margin-bottom: 10px;
   padding-left: 30px;
@@ -525,16 +541,16 @@ footer {
   background-color: rgb(57, 68, 83);
   resize: none;
   border: 1px solid rgb(57, 68, 83);
-  width: 100%;
+  width: calc(100% + 30px);
   height: 100px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 920px) {
   .textarea-wrapper {
     margin: 0;
     margin-right: 30px;
-    width: 240px;
-    height: 50px;
+    width: 340px;
+    height: 54px;
   }
 }
 
@@ -561,7 +577,6 @@ footer {
   justify-content: space-between;
   flex-direction: column;
   padding: 25px 0;
-  background-color: pink;
 }
 
 @media (min-width: 920px) {
@@ -586,35 +601,32 @@ footer {
 }
 
 .send-button {
+  text-align: center;
+  align-self: center;
   width: 170px;
   height: 50px;
   font-size: 16px;
   color: rgb(255, 255, 255);
   background-color: rgb(103, 136, 243);
-  text-align: center;
   border: 1px solid rgb(103, 136, 243);
   border-radius: 30px;
-  align-self: center;
 }
 
 .network {
-  padding-right: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 21px;
-  width: 40px;
-  height: 32px;
+  padding-right: 30px;
   padding-left: 70px;
+  width: 40px;
+  font-size: 21px;
   color: rgb(143, 152, 164);
-  background-color: red;
 }
 
 .footer-control {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: green;
 }
 
 .social {
